--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,6 @@ db.sqlite3
 __pycache__/
 ./src/__pycache__
 ./home/__pycache__
+./stream/__pycache__
 ./home/migrations/__pycache__
+./stream/migrations/__pycache__
